# shark

./: .gitignore  1.txt  CMakeLists.txt  README.md  README_CN.md  kmpkg-configuration.json  kmpkg.json  person.shark  setup.py  shark_options.runtime.cc  shark_options.runtime.h
benchmark/skp/: capnproto_carsales.cc  capnproto_catrank.cc  capnproto_common.h  capnproto_eval.cc  carsales.capnp  carsales.proto  catrank.capnp  catrank.proto  common.h  eval.capnp  eval.proto  null_carsales.cc  null_catrank.cc  null_common.h  null_eval.cc  protobuf_carsales.cc  protobuf_catrank.cc  protobuf_common.h  protobuf_eval.cc  runner.cc
capnproto-2/c++/: configure.ac
cmake/: kmcmake_cc_sk.cmake  kmcmake_cc_tml.cmake  shark_config.cmake.in  shark_deps.cmake
docs/: encoding.md
examples/: CMakeLists.txt  example.cc  example.proto  example.tml.cc  example.tml.h  foo_ex.cc
google/protobuf/: descriptor.runtime.cc  descriptor.runtime.h
python/proto_gen_sk/: builder.py  plugin.py  shark_options.proto  shark_options_pb2.py
scripts/: gen_python_proto.sh  test_python_proto.sh
shark/: CMakeLists.txt  builder.h  class.cc  class.h  comment.cc  cpp_generator.cc  default_generator.cc  default_generator.h  expression.cc  expression.h  file.cc  file.h  foo.cc  includer.h  main.cc  names.cc  names.h  namespace.cc  namespace.h  shark.cc  shark.proto  shark_debug.sh  test.proto  test.sk.cc  test.sk.h  type.cc  type.h
shark/ast/: code_generator.cc  code_generator.h  compile_config.h  cpp_alias_template.cc  cpp_alias_template.h  cpp_array_type.h  cpp_attribute.cc  cpp_attribute.h  cpp_class.cc  cpp_class.h  cpp_class_template.cc  cpp_class_template.h  cpp_concept.cc  cpp_concept.h  cpp_decltype_type.h  cpp_entity.cc  cpp_entity.h  cpp_entity_container.h  cpp_entity_index.cc  cpp_entity_index.h  cpp_entity_kind.cc  cpp_entity_kind.h  cpp_entity_ref.h  cpp_enum.cc  cpp_enum.h  cpp_expression.cc  cpp_expression.h  cpp_file.cc  cpp_file.h  cpp_forward_declarable.cc  cpp_forward_declarable.h  cpp_friend.cc  cpp_friend.h  cpp_function.cc  cpp_function.h  cpp_function_template.cc  cpp_function_template.h  cpp_function_type.h  cpp_language_linkage.cc  cpp_language_linkage.h  (+31 more)
shark/bak/: bytes_field.h  enum.cc  extension.cc  extension.h  file.h  map_field.h  message_field.cc  message_field.h  oneof_field.h  service.cc
shark/builder/: any_field.cc  any_field.h  bytes_field.cc  bytes_field.h  enum.cc  enum.h  enum_field.cc  enum_field.h  extension.cc  extension.h  map_field.cc  map_field.h  message.cc  message.h  message_field.cc  message_field.h  oneof_field.cc  oneof_field.h  primitive_field.cc  primitive_field.h  service.cc  string_field.cc  string_field.h
shark/cpp/: block_writer.h  code_block.cc  code_block.h  code_writer.cc  code_writer.h  field_generator.cc  field_generator.h  field_option.cc  field_option.h  generator.cc  generator.h  km_option.cc  km_option.h  message_generator.cc  message_generator.h  message_option.cc  message_option.h
shark/descriptor/: file.cc  file.h  meta_field.cc  meta_field.h  meta_file.cc  meta_map.cc  meta_map.h  meta_message.cc  meta_message.h
shark/detail/: assert.h  intrusive_list.hpp
shark/generator/: any_field.cc  any_field.h  bytes_field.cc  bytes_field.h  code_generator.h  compat.h  enum.cc  enum.h  enum_codegen.cc  enum_codegen.h  enum_field.cc  enum_field.h  enum_generator.cc  enum_generator.h  extension.cc  extension.h  field.cc  field.h  field_base.cc  field_base.h  field_descriptor.h  field_map.cc  field_map.h  field_meta.cc  field_meta.h  field_no_meta.h  file.cc  file.h  file_generator.cc  file_generator.h  generator.cc  generator.h  generator_handler.h  global_state.cc  global_state.h  helpers.cc  helpers.h  include_manager.cc  include_manager.h  main.cc  (+27 more)
shark/idl/: shark_options.pb.cc  shark_options.pb.h  shark_options.proto
shark/lib/: shark.cc  type.cc  uri.cc
shark/meta/: field_base.cc  field_base.h  field_meta.cc  field_meta.h  global_state.cc  global_state.h  meta_file.cc  meta_file.h  meta_map.cc  meta_map.h  meta_message.cc  meta_message.h
shark/option/: enum.proto  file.proto  message.proto
shark/rt/: any_field.cc  any_field.h  bytes_field.cc  bytes_field.h  enum.cc  enum.h  enum_field.cc  enum_field.h  extension.cc  extension.h  field_map.cc  field_map.h  file.cc  file.h  map_field.cc  map_field.h  message.cc  message.h  message_field.cc  message_field.h  oneof_field.cc  oneof_field.h  primitive_field.cc  primitive_field.h  service.cc  service.h  string_field.cc  string_field.h
shark/skb/: file.cc  file.h
shark/tml/: enum.cc  enum.h  enum_field.cc  enum_field.h  extension.cc  file.cc  file.h  message.cc  message.h  message_field.cc  message_field.h  primitive_field.cc  primitive_field.h  service.cc  string_field.cc  string_field.h
shark/utility/: helpers.cc  helpers.h  type.cc  type.h  uri.cc  uri.h
shark/view/: any_field.cc  any_field.h  bytes_field.cc  bytes_field.h  enum.cc  enum.h  enum_field.cc  enum_field.h  extension.cc  extension.h  map_field.cc  map_field.h  message.cc  message.h  message_field.cc  message_field.h  oneof_field.cc  oneof_field.h  primitive_field.cc  primitive_field.h  service.cc  (+3 more)
tests/: .gitignore  CMakeLists.txt  advance.proto  advance.tml.h  base.proto  base.tml.h  case_test.cc  checker_test.cc  comment.cc  config.pb.cc  config.proto  config.sk.cc  config.sk.h  config.tml.cc  config.tml.h  enum_runtime_golden_test.cc  enum_runtime_test.cc  foo_doctest.cc  foo_test.cc  format.cc  test.pb.cc  test.pb.h  test.proto  test.sk.cc  test.sk.h  test.skb.cc  test.skb.h  test.tml.cc  test.tml.h  test_proto_test.cc  v1.proto
tests/base/: CMakeLists.txt  case_test.cc  comment.cc  config.proto
tests/enum/: CMakeLists.txt  base.proto  base_test.cc  ext_test.cc  extern.proto  inner.proto  inner_test.cc
tests/import/: CMakeLists.txt  advance.proto
tests/proto/: enum_runtime.proto
tests/require/: CMakeLists.txt  base.proto  base_test.cc  enum_global.proto  enum_repeat.proto  enum_test.cc  message_test.cc  msg_base.proto  msg_ext.proto  repeat.proto  repeat_test.cc
tests/tests/: v1.sk.cc  v1.sk.h
(+138 files in other folders)
